2009-05-20:
===========

- Some minor bug fixes.
- New perf test12, for the XO. Thanks to the suggestions provided by roc from 
Mozilla!

2009-05-17:
==========

- More code organization work.
- More performance work and bug fixes.
- Performance improvements for the following drawing tools: rectangle, ellipse 
and line.
- Further adjustment to the pencil and eraser tools. For example, now you can 
press Escape to cancel the drawing operation.
- Added new option to config: toolDrawDelay.

2009-05-13:
===========

- Performance testing on the OLPC XO-1 laptop. Check tests/gsoc2009/0001-perf.
- Improved the performance of the pencil and of the eraser drawing tools.
- Improved performance of ev_keyboard and ev_canvas.
- Improved performance of the MouseKeys extension.

2009-05-08:
===========

- The MouseKeys extension is now working.
- The extension now fires the 'click' event as well, and it allows a second way 
of handling mouse button events. Instead of button toggling with a key press.  
Now one can simulate holding down the mouse button by holding down a key. See 
action 'ButtonClick'.
- The MouseKeys virtual pointer now provides a visual indicator if the mouse 
button is down or not.

2009-05-07:
===========

- Made changes to the selection tool. Hopefully, now the code is much easier to 
follow.
- Added support for holding the Control key down while performing a selection 
operation (drag/resize). This allows the user to toggle the selection 
transformation mode easier and quicker. Thanks to Martin Langhoff for the 
suggestion.
- Did split the entire tools.js into multiple files. Each tool is in its own 
file now. Made the main code load tools individually.
- Conditional loading of json2.js. It won't load in those browsers with native 
JSON support.

2009-05-04:
===========

- Most functionality is working again. Notable exceptions: color editor, mouse 
keys, shadows and color picker.
- Continued work on the drawing tools code and the main code.