@@ -1,3 +1,10 @@
+2009-05-21:
+===========
+
+- Minor fixes for line, pencil, ellipse and eraser.
+- Curve tool: performance work, bug fixes and usability improvements.
+- Two new strings in lang/en.json for the curve tool.
+
 2009-05-20:
 ===========
 
@@ -6,7 +13,7 @@
 Mozilla!
 
 2009-05-17:
-==========
+===========
 
 - More code organization work.
 - More performance work and bug fixes.
